# oflowers-rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs  schema.rs
src/domain/user/: dto.rs  entity.rs
src/etc/: config.toml
src/handler/: mod.rs  other_handler.rs  routes.rs  user_handler.rs
src/logic/: mod.rs  user_logic.rs
src/middleware/: auth.rs  cors.rs
src/pkg/: database.rs  error.rs  json.rs  jwt.rs  mod.rs  pagination.rs  result.rs  tool.rs
src/stdlib/: mod.rs  std_boxed.rs  std_cell.rs  std_rc.rs  std_time.rs
src/svc/: config.rs  context.rs
